Mon Sep 10 08:17:08 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Will not run the File_IO test in the
	  Minimum CORBA configuration.

Mon Sep 10 08:05:39 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Prevented the DLL_ORB test from running
	  in static builds.

Sun Sep  9 10:20:59 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* */Makefile: Updated dependencies.

Sun Sep  9 08:43:02 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Handle_Set.i: Added a check in set_bit () and clr_bit () for
	  ACE_INVALID_HANDLE. If we pass a ACE_INVALID_HANDLE we were
	  crashing which is not good and hence the fix.

Sun Sep  9 08:28:52 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Reactor_Impl.h:
	* ace/Select_Reactor_Base.h:
	* ace/Select_Reactor_Base.cpp (is_dispatchable): Added a new
	  method. This method, just figures out whether the buffer has any
	  dispatchable info or not.

	* ace/WFMO_Reactor.h:
	* ace/WFMO_Reactor.cpp: Added the above method in the WFMO
	  Reactor.

	* ace/TP_Reactor.cpp: The handle_notify_events () method now
	  checks whether the buffer it has read is dispatchable or not. If
	  it is then it gives up the token to make an upcall. Else, it
	  just sits around to remove messages of the pipe, till it find
	  one with a dispatchable info. The fix was necessary  so that
	  wake-up calls that are unanswered are removed of the
	  pipe. Unanswered wakeup calls were filling up the pipe and they
	  were blocking some application from writing further to the
	  pipe. This should be in all probability be the final fix to the
	  Reactor.

Sat Sep  8 09:34:52 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Logging_Strategy_Test.cpp: Fixed a typo that was giving
	  compile errors in VXWORKS builds.

Fri Sep  7 16:40:37 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/OS.h:
	  Added an if-def case for IP_MULTICAST_TTL too.
